crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__no_clock_md.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].md_content"
---
# PureAdder

## Ports

| Port | Direction | Type | Width | TS Type | 4-State |
|------|-----------|------|-------|---------|--------|
| a | input | logic | 8 | `bigint` | yes |
| b | input | logic | 8 | `bigint` | yes |
| sum | output | logic | 9 | `bigint` (readonly) | yes |
