crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__output_only_js.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.ConstGen = {
  __celox_module: true,
  name: "ConstGen",
  sources: [
    { path: "test.veryl", content: require("fs").readFileSync(__dirname + "/../test.veryl", "utf-8") },
  ],
  ports: {
    val: { direction: "output", type: "logic", width: 8, is4state: true },
  },
  events: [],
};
