crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__output_only_md.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].md_content"
---
# ConstGen

## Ports

| Port | Direction | Type | Width | TS Type | 4-State |
|------|-----------|------|-------|---------|--------|
| val | output | logic | 8 | `bigint` (readonly) | yes |
