crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__wide_port_js.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.WideAdder = {
  __celox_module: true,
  name: "WideAdder",
  sources: [
    { path: "test.veryl", content: require("fs").readFileSync(__dirname + "/../test.veryl", "utf-8") },
  ],
  ports: {
    a: { direction: "input", type: "logic", width: 64, is4state: true },
    b: { direction: "input", type: "logic", width: 64, is4state: true },
    clk: { direction: "input", type: "clock", width: 1, is4state: true },
    sum: { direction: "output", type: "logic", width: 65, is4state: true },
  },
  events: ["clk"],
};
